--- a/package.json
+++ b/package.json
@@ -9,22 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
+    "@google/generative-ai": "^0.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
+    "lucide-react": "^0.482.0",
+    "next": "^14.1.0",
+    "next-themes": "^0.4.6",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
+    "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
-    "@google/generative-ai": "^0.2.0"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
-    "@types/node": "^20.11.16",
-    "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0"
+    "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.33"
   }
-} 
+}
